fix: scrollbar appearance changes

--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,10 @@ html {
 ::-webkit-scrollbar-thumb {
   background-color: #b1591e;
   border-radius: 5px;
-  border: 1px solid #e58b2c;
+  border: 1px solid #fc9629;
 }
 ::-webkit-scrollbar-track {
-  background-color: #e58b2c;
+  background-color: #fc9629;
 }
 .player {
   font-family: "Sans";
